--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
       <version>17.0.6</version>
     </dependency>
     <dependency>
+      <groupId>com.jfoenix</groupId>
+      <artifactId>jfoenix</artifactId>
+      <version>9.0.10</version>
+    </dependency>
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>17.0.6</version>
