--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.plantwidget_g18_gui/com.example.plantwidget_g18_gui.HelloApplication</mainClass>
+              <mainClass>com.example.plantwidget_g18_gui/com.example.plantwidget_g18_gui.PlantWidgetApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
